<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">文件管理</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="inner_storage">内部存储</string>
    <string name="inner_hasused">已用：</string>
    <string name="sd_storage">SD卡</string>
    <string name="sd_hasused">已用：</string>
    <string name="secret_storage">保密柜</string>
    <string name="login_network">登录cloud.huawei.com管理文件 </string>
    
    <string name="picture_manager">图片</string>
    <string name="video_manager">视频</string>

</resources>
